--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
 DB_SSL_MODE=
+
+PG_ADMIN_PORT=
+DB_DEFAULT_EMAIL=
+DB_DEFAULT_PASSWORD=
+DB_CONFIG_SERVER_MODE=
