--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-DB_PORT=
-DB_HOST=
-DB_NAME=
-DB_USERNAME=
-DB_PASSWORD=
-DB_SSL_MODE=
+MONGO_INITDB_ROOT_USERNAME=user
+MONGO_INITDB_ROOT_PASSWORD=pass
+MONGO_INITDB_DATABASE=db
