--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,22 @@
 services:
-  postgres:
-    container_name: postgres
-    image: postgres:14.8-alpine3.18
-    command:
-      - "postgres"
-      - "-c"
-      - "max_connections=50"
-      - "-c"
-      - "shared_buffers=1GB"
-      - "-c"
-      - "effective_cache_size=4GB"
-      - "-c"
-      - "work_mem=16MB"
-      - "-c"
-      - "maintenance_work_mem=512MB"
-      - "-c"
-      - "random_page_cost=1.1"
-      - "-c"
-      - "temp_file_limit=10GB"
-      - "-c"
-      - "log_min_duration_statement=200ms"
-      - "-c"
-      - "idle_in_transaction_session_timeout=10s"
-      - "-c"
-      - "lock_timeout=1s"
-      - "-c"
-      - "statement_timeout=60s"
-      - "-c"
-      - "shared_preload_libraries=pg_stat_statements"
-      - "-c"
-      - "pg_stat_statements.max=10000"
-      - "-c"
-      - "pg_stat_statements.track=all"
+  database:
+    image: mongo:6.0
     environment:
-      POSTGRES_DB: ${DB_NAME:?error}
-      POSTGRES_USER: ${DB_USERNAME:?error}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:?error}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
     ports:
-      - "${DB_PORT}:5432"
+      - "27017:27017"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME} -d ${DB_NAME}"]
+      test: mongo --username ${MONGO_INITDB_ROOT_USERNAME} --password ${MONGO_INITDB_ROOT_PASSWORD} --eval "db.adminCommand('ping')"
       interval: 10s
       timeout: 5s
+      start_period: 30s
       retries: 5
-      start_period: 10s
-    restart: unless-stopped
+    volumes:
+      - "./.database:/data/db"
     deploy:
       resources:
         limits:
-          cpus: '1'
-          memory: 4G
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "200k"
-        max-file: "10"
+          cpus: "1"
+          memory: 2G
